Integrated the following from //depot/GNR/...: Change 252932 by quanah@qgnr on 2010/10/06 19:16:29
bug: 51005
Patch pieces for 51005

http://bugzilla.zimbra.com/show_bug.cgi?id=51005

Copied from Perforce
 Change: 252933